# rustDB

./: Cargo.toml  Dockerfile  README.md  UML.md  db_save.json  docker-compose.yml
.github/workflows/: ci.yml
src/: client.rs  database.rs  lib.rs  main.rs  query.rs  replication.rs  row.rs  schema.rs  server.rs  sql.rs  sql.rs.new  table.rs
tests/: error_tests.rs  integration_tests.rs  unit_tests.rs
